# django-rest-framework-api

./: pyproject.toml
backend/cfehome/cfehome/: settings.py
